--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     @RenderSection("Stylesheets", required: false)
 </head>
-<body class="darkmode">
+<body class="lightmode">
     <div class="body-outside"></div>
     <div class="f-modaldarkness"></div>
     <div class="drawer">
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="header_right_section">
-                <div class="shorcuts-cont">
+                <div class="shortcuts-cont">
                     <i class="bi bi-search search-shortcut"></i>
                     <i class="bi bi-currency-dollar donate-shortcut"></i>
                     <i class="bi bi-plus-circle-fill"></i>
