--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -211,11 +211,12 @@ main{
             padding: 4px 10px;
             .pd-saved{
                 background-color: #4A8D5D !important;
+                color: #fff;
             }
             button{
                 color: var(--text-color1);
                 border-radius: 20px;
-                background-color: var(--background-color-hover2);
+                background-color: var(--pd-actionbtns-color);
                 outline: none;
                 border: none;
                 margin-bottom: 8px;
@@ -257,6 +258,7 @@ main{
             justify-content: space-between;
             gap: 10px;
             padding: 6px;
+            color: #fff;
             > a{
                 padding: 4px 14px;
                 border-radius: 8px;
@@ -288,7 +290,7 @@ main{
     }
     .sticky-nav{
         display: flex;
-        background-color: $sitebgcolor !important;
+        background-color: var(--background-color1) !important;
         border-radius: 10px;
         padding: 8px;
         width: 100%;
@@ -457,7 +459,7 @@ main{
                     font-size: 1.1rem;
                     margin: 0 6px 7px;
                     background-color: rgb(139, 136, 199);
-                    color: var(--text-color1);
+                    color: #fff;
                     transition: background-color 0.2s;
                     outline: none;
                     border: none;
@@ -487,6 +489,7 @@ main{
                     display: flex;
                     align-items: center;
                     background-color: #985C30;
+                    color: #fff;
 
                     > i{
                         font-size: 1.1rem;
@@ -611,6 +614,7 @@ main{
             flex-wrap: wrap;
             justify-content: center;
             padding-bottom: 4px;
+            color: #fff;
             span{
                 border-radius: 12px;
                 padding: 2px 8px;
@@ -807,6 +811,9 @@ main{
     .post{
         background-color: var(--background-color1) !important;
         border-radius: 10px;
+    }
+    .pd-actions > button{
+        --pd-actionbtns-color: #dcdcdc;
     }
     .post-options{
         padding: 20px 10px 10px !important;
