--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -1,35 +1,60 @@
-/*--------DARK MODE----------*/
 :root {
   --background-color1: #1D1D1D;
   --background-color2: #313131;
-  --background-color-hover1:#373737;
-  --background-color-hover2:#4E4E4E;
-  --background-color-hover3:#5e5e5e;
-  --background-color-hover4:#3b3b3b;
-  --background-color-boxshadow1:#31313150;
+  --background-color-hover1: #373737;
+  --background-color-hover2: #4E4E4E;
+  --background-color-hover3: #5e5e5e;
+  --background-color-hover4: #3b3b3b;
+  --background-color-boxshadow1: #31313150;
   --text-color1: #ffffff;
-  --text-color2:#bababa;
+  --text-color2: #bababa;
   --text-color-hover1: #cccccc;
-  --text-color-boxshadow1:#ffffff50;
-  --text-color-boxshadow2:#ffffff70;
+  --text-color-boxshadow1: #ffffff50;
+  --text-color-boxshadow2: #ffffff70;
+  --headericon-color: #ffffff;
+  --accountdropdown-icon-hover: #ffffff10;
+  --dropdownbg-color: #313131;
+  --pd-actionbtns-color: #313131;
+  --shortcuticons-color: #ffffff;
   --searchplaceholder-color: #939393;
 }
 
-.darkmode {
-  --background-color1: #1D1D1D;
-  --background-color2: #313131;
-  --background-color-hover1:#373737;
-  --background-color-hover2:#4E4E4E;
-  --background-color-hover3:#5e5e5e;
-  --background-color-hover4:#3b3b3b;
-  --background-color-boxshadow1:#31313150;
-  --text-color1: #ffffff;
-  --text-color2:#bababa;
-  --text-color-hover1: #cccccc;
-  --text-color-boxshadow1:#ffffff50;
-  --text-color-boxshadow2:#ffffff70;
+.lightmode {
+  --background-color1: #f0f0f0;
+  --background-color2: #dcdcdc;
+  --background-color-hover1: #d1d8db;
+  --background-color-hover2: #c5c5c5;
+  --background-color-hover3: #c5c5c5;
+  --background-color-hover4: #b5b5b5;
+  --background-color-boxshadow1: #e5e5e550;
+  --text-color1: #282828;
+  --text-color2: #393939;
+  --text-color-hover1: #757575;
+  --text-color-boxshadow1: #00000050;
+  --text-color-boxshadow2: #00000070;
+  --headericon-color: #ffffff;
+  --accountdropdown-icon-hover:#00000010;
+  --dropdownbg-color: #e7e7e7;
+  --pd-actionbtns-color: #c7c7c7;
+  --shortcuticons-color: #626262;
 }
 
+/*
+.darkmode{
+    --background-color1: #1D1D1D;
+    --background-color2: #313131;
+    --background-color-hover1:#373737;
+    --background-color-hover2:#4E4E4E;
+    --background-color-hover3:#5e5e5e;
+    --background-color-hover4:#3b3b3b;
+    --background-color-boxshadow1:#31313150;
+
+    --text-color1: #ffffff;
+    --text-color2:#bababa;
+    --text-color-hover1: #cccccc;
+    --text-color-boxshadow1:#ffffff50;
+    --text-color-boxshadow2:#ffffff70;
+}*/
 /*----------SETTINGS---------*/
 html {
   font-size: 14px;
@@ -196,12 +221,6 @@ header .header-wrap {
 .drawer .dw-list > ul > li > a:hover {
   background-color: var(--background-color2);
 }
-.drawer .dw-list > ul > li > a .dw-icon-cont {
-  width: 2.4rem;
-}
-.drawer .dw-list > ul > li > a .dw-icon-cont i {
-  font-size: 1.4rem;
-}
 .drawer .dw-settings {
   margin-top: auto;
   padding: 4px 20px;
@@ -212,6 +231,12 @@ header .header-wrap {
 }
 .drawer .dw-settings:hover {
   background-color: #b94f4f;
+}
+.drawer .dw-icon-cont {
+  width: 2.4rem;
+}
+.drawer .dw-icon-cont i {
+  font-size: 1.4rem;
 }
 
 .logo-cont {
@@ -285,23 +310,20 @@ header .header-wrap {
   /*height: 100%;*/
 }
 
-.shorcuts-cont {
+.shortcuts-cont {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-.shorcuts-cont > i {
-  color: var(--text-color1);
+.shortcuts-cont > i {
+  color: var(--shortcuticons-color);
   font-size: 2.4rem;
   margin-right: 16px;
   cursor: pointer;
   transition: 0.3s ease;
 }
-.shorcuts-cont > i:hover {
-  text-shadow: 0px 0px 6px var(--text-color-boxshadow2);
-}
-.shorcuts-cont > i:last-child {
+.shortcuts-cont > i:last-child {
   margin-right: 0;
 }
 
@@ -327,7 +349,7 @@ header .header-wrap {
 .account-cont .dropdown_icon-wrap {
   height: 50px;
   padding: 0 2px;
-  background-color: var(--background-color2);
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -340,7 +362,7 @@ header .header-wrap {
   color: var(--text-color1);
 }
 .account-cont:hover .dropdown_icon-wrap {
-  background-color: var(--background-color-hover1);
+  background-color: var(--accountdropdown-icon-hover);
 }
 .account-cont .account-dropdown {
   z-index: 900;
@@ -351,7 +373,7 @@ header .header-wrap {
   top: 52px;
   right: 16px;
   border-radius: 8px;
-  background-color: var(--background-color2);
+  background-color: var(--dropdownbg-color);
   font-size: 1rem;
   font-family: "Itim", cursive;
   overflow: hidden;
