--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -2,20 +2,54 @@
 :root{
     --background-color1: #1D1D1D;
     --background-color2: #313131;
-    --background-color-hover1:#373737;
-    --background-color-hover2:#4E4E4E;
-    --background-color-hover3:#5e5e5e;
-    --background-color-hover4:#3b3b3b;
-    --background-color-boxshadow1:#31313150;
+    --background-color-hover1: #373737;
+    --background-color-hover2: #4E4E4E;
+    --background-color-hover3: #5e5e5e;
+    --background-color-hover4: #3b3b3b;
+    --background-color-boxshadow1: #31313150;
 
     --text-color1: #ffffff;
-    --text-color2:#bababa;
+    --text-color2: #bababa;
     --text-color-hover1: #cccccc;
-    --text-color-boxshadow1:#ffffff50;
-    --text-color-boxshadow2:#ffffff70;
+    --text-color-boxshadow1: #ffffff50;
+    --text-color-boxshadow2: #ffffff70;
+
+    //individual
+    --headericon-color: #ffffff;
+    --accountdropdown-icon-hover: #ffffff10;
+    --dropdownbg-color: #313131;
+    --pd-actionbtns-color: #313131;
+    --shortcuticons-color: #ffffff;
+    //----------
 
     --searchplaceholder-color: #939393;
 }
+.lightmode{
+    --background-color1: #f0f0f0;
+    --background-color2: #dcdcdc;
+    --background-color-hover1: #d1d8db;
+    --background-color-hover2: #c5c5c5;
+    --background-color-hover3: #c5c5c5;
+    --background-color-hover4: #b5b5b5;
+    --background-color-boxshadow1: #e5e5e550;
+
+    --text-color1: #282828;
+    --text-color2: #393939;
+    --text-color-hover1: #757575;
+    --text-color-boxshadow1: #00000050;
+    --text-color-boxshadow2: #00000070;
+
+    //individual
+    --headericon-color: #ffffff;
+    --accountdropdown-icon-hover:#00000010;
+    --dropdownbg-color: #e7e7e7;
+    --pd-actionbtns-color: #c7c7c7;
+    --shortcuticons-color: #626262;
+    //----------
+
+    //#bda952
+}
+/*
 .darkmode{
     --background-color1: #1D1D1D;
     --background-color2: #313131;
@@ -30,4 +64,4 @@
     --text-color-hover1: #cccccc;
     --text-color-boxshadow1:#ffffff50;
     --text-color-boxshadow2:#ffffff70;
-}
+}*/
