light mode 1 fix 1

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     @RenderSection("Stylesheets", required: false)
 </head>
-<body class="lightmode">
+<body class="darkmode">
     <div class="body-outside"></div>
     <div class="f-modaldarkness"></div>
     <div class="drawer">
