--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -448,6 +448,9 @@ header .header-wrap {
   .drawerbtn-cont {
     display: none;
   }
+  .lightmode {
+    --pd-actionbtns-color: #dcdcdc !important;
+  }
 }
 @media (min-width: 1200px) {
   .logo-cont span {
