--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -14,7 +14,7 @@
   --headericon-color: #ffffff;
   --accountdropdown-icon-hover: #ffffff10;
   --dropdownbg-color: #313131;
-  --pd-actionbtns-color: #313131;
+  --pd-actionbtns-color: #444444;
   --shortcuticons-color: #ffffff;
   --searchplaceholder-color: #939393;
 }
@@ -447,6 +447,9 @@ header .header-wrap {
   }
   .drawerbtn-cont {
     display: none;
+  }
+  .darkmode {
+    --pd-actionbtns-color: #313131 !important;
   }
   .lightmode {
     --pd-actionbtns-color: #dcdcdc !important;
