--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -1,118 +1,10 @@
-:root {
-  --background-color1: #1D1D1D;
-  --background-color2: #313131;
-  --background-color-hover1: #373737;
-  --background-color-hover2: #4E4E4E;
-  --background-color-hover3: #5e5e5e;
-  --background-color-hover4: #3b3b3b;
-  --background-color-boxshadow1: #31313150;
-  --text-color1: #ffffff;
-  --text-color2: #bababa;
-  --text-color-hover1: #cccccc;
-  --text-color-boxshadow1: #ffffff50;
-  --text-color-boxshadow2: #ffffff70;
-  --headericon-color: #ffffff;
-  --accountdropdown-icon-hover: #ffffff10;
-  --dropdownbg-color: #313131;
-  --pd-actionbtns-color: #313131;
-  --shortcuticons-color: #ffffff;
-  --searchplaceholder-color: #939393;
-}
-
-.lightmode {
-  --background-color1: #f0f0f0;
-  --background-color2: #dcdcdc;
-  --background-color-hover1: #d1d8db;
-  --background-color-hover2: #c5c5c5;
-  --background-color-hover3: #c5c5c5;
-  --background-color-hover4: #b5b5b5;
-  --background-color-boxshadow1: #e5e5e550;
-  --text-color1: #282828;
-  --text-color2: #393939;
-  --text-color-hover1: #757575;
-  --text-color-boxshadow1: #00000050;
-  --text-color-boxshadow2: #00000070;
-  --headericon-color: #ffffff;
-  --accountdropdown-icon-hover:#00000010;
-  --dropdownbg-color: #e7e7e7;
-  --pd-actionbtns-color: #c7c7c7;
-  --shortcuticons-color: #626262;
-}
-
-@media (min-width: 768) {
-  .pd-actions > button {
-    --pd-actionbtns-color: #dcdcdc;
-  }
-}
-/*
-.darkmode{
-    --background-color1: #1D1D1D;
-    --background-color2: #313131;
-    --background-color-hover1:#373737;
-    --background-color-hover2:#4E4E4E;
-    --background-color-hover3:#5e5e5e;
-    --background-color-hover4:#3b3b3b;
-    --background-color-boxshadow1:#31313150;
-
-    --text-color1: #ffffff;
-    --text-color2:#bababa;
-    --text-color-hover1: #cccccc;
-    --text-color-boxshadow1:#ffffff50;
-    --text-color-boxshadow2:#ffffff70;
-}*/
-main {
-  display: flex;
-  flex-direction: row;
-  color: var(--text-color1);
-  position: relative;
-}
-
-.posts-cont {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-}
-.posts-cont .post-options {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
-.posts-cont .post-options .po-option {
-  font-size: 1.6rem;
-  text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
-  font-family: "Josefin Sans", sans-serif;
-  cursor: pointer;
-}
-.posts-cont .post-options .po-option:hover {
-  text-decoration: underline;
-}
-.posts-cont .post-options .po-orderby {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: baseline;
-}
-.posts-cont .post-options .po-orderby .orderby-btn {
-  margin-right: 16px;
-}
-.posts-cont .post-options .po-orderby .orderby-value {
-  font-size: 1.2rem;
-}
-.posts-cont .post-options .po-orderby .orderby-value:hover {
-  text-decoration: unset;
-}
-.posts-cont .post-options .po-type {
-  margin-left: auto;
-  margin-right: 36px;
-}
-.posts-cont .post {
+.post {
   margin-bottom: 12px;
   background-color: var(--background-color2);
   overflow: hidden;
+  max-height: 260px;
 }
-.posts-cont .post:last-child {
+.post:last-child {
   margin-bottom: unset;
 }
 
@@ -287,6 +179,54 @@ main {
 }
 .post-menu .pd-right .pd-actions button:hover {
   background-color: var(--background-color-hover3);
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  color: var(--text-color1);
+  position: relative;
+}
+
+.posts-cont {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+.posts-cont .post-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+.posts-cont .post-options .po-option {
+  font-size: 1.6rem;
+  text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+  font-family: "Josefin Sans", sans-serif;
+  cursor: pointer;
+}
+.posts-cont .post-options .po-option:hover {
+  text-decoration: underline;
+}
+.posts-cont .post-options .po-orderby {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.posts-cont .post-options .po-orderby .orderby-btn {
+  margin-right: 16px;
+}
+.posts-cont .post-options .po-orderby .orderby-value {
+  font-size: 1.2rem;
+}
+.posts-cont .post-options .po-orderby .orderby-value:hover {
+  text-decoration: unset;
+}
+.posts-cont .post-options .po-type {
+  margin-left: auto;
+  margin-right: 36px;
 }
 
 .nav-cont {
